--- a/Object/CricketGameScore.html
+++ b/Object/CricketGameScore.html
@@ -32,6 +32,9 @@
     win: 0,
     lost: 0,
     tie: 0,
+    displayScore: function() {
+      return `No. of matches Won: ${score.win}, Lost: ${score.lost}, Tie: ${score.tie}`;
+    }
   };
   
   function generateComputerChoice() {
@@ -95,7 +98,7 @@
     
     ${result}
 
-    Win: ${score.win}, Lost: ${score.lost}, Tie: ${score.tie}`);
+    ${score.displayScore()}`);
   }
 
   </script>
